[gd_scene load_steps=8 format=3 uid="uid://dy1u50we7gtru"]

[ext_resource type="Script" path="res://material_maker/panels/graph_edit/graph_edit.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c0j4px4n72di5" path="res://material_maker/icons/icons.tres" id="2"]
[ext_resource type="Script" path="res://material_maker/tools/undo_redo/undo_redo.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://buj231c2gxm4o" path="res://material_maker/widgets/desc_button/desc_button.tscn" id="4"]

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("2")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("2")
region = Rect2(15.4016, 47.1451, 16.7512, 17.8319)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("2")
region = Rect2(0, 48, 16, 16)

[node name="GraphEdit" type="GraphEdit" groups=["mm_graphedit"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.49829
offset_bottom = -1.49829
theme_override_constants/port_hotzone_inner_extent = 4
theme_override_constants/port_hotzone_outer_extent = 4
right_disconnects = true
script = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GraphUI" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -698.0
offset_top = 11.0
offset_bottom = 24.0
alignment = 2

[node name="SubGraphUI" type="HBoxContainer" parent="GraphUI"]
layout_mode = 2
size_flags_horizontal = 9

[node name="Label" type="LineEdit" parent="GraphUI/SubGraphUI"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 9

[node name="Description" parent="GraphUI/SubGraphUI" instance=ExtResource("4")]
layout_mode = 2

[node name="ButtonTransmitsSeed" type="Button" parent="GraphUI/SubGraphUI"]
layout_mode = 2
size_flags_horizontal = 9
tooltip_text = "Affect children seeds"
toggle_mode = true
icon = SubResource("3")

[node name="ButtonUp" type="Button" parent="GraphUI/SubGraphUI"]
layout_mode = 2
size_flags_horizontal = 9
tooltip_text = "Back to parent"
icon = SubResource("4")

[node name="ButtonShowTree" type="Button" parent="GraphUI"]
layout_mode = 2
tooltip_text = "Show hierarchy"
icon = SubResource("5")

[node name="Control" type="Control" parent="GraphUI"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="UndoRedo" type="Node" parent="."]
script = ExtResource("3")

[connection signal="connection_from_empty" from="." to="." method="request_popup" binds= [true]]
[connection signal="connection_request" from="." to="." method="on_connect_node"]
[connection signal="connection_to_empty" from="." to="." method="request_popup" binds= [false]]
[connection signal="copy_nodes_request" from="." to="." method="copy"]
[connection signal="disconnection_request" from="." to="." method="on_disconnect_node"]
[connection signal="duplicate_nodes_request" from="." to="." method="duplicate_selected"]
[connection signal="node_deselected" from="." to="." method="_on_GraphEdit_node_unselected"]
[connection signal="node_selected" from="." to="." method="_on_GraphEdit_node_selected"]
[connection signal="paste_nodes_request" from="." to="." method="paste"]
[connection signal="visibility_changed" from="." to="." method="_on_GraphEdit_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="do_send_changed_signal"]
[connection signal="text_changed" from="GraphUI/SubGraphUI/Label" to="." method="_on_Label_text_changed"]
[connection signal="descriptions_changed" from="GraphUI/SubGraphUI/Description" to="." method="_on_Description_descriptions_changed"]
[connection signal="toggled" from="GraphUI/SubGraphUI/ButtonTransmitsSeed" to="." method="_on_ButtonTransmitsSeed_toggled"]
[connection signal="pressed" from="GraphUI/SubGraphUI/ButtonUp" to="." method="on_ButtonUp_pressed"]
[connection signal="pressed" from="GraphUI/ButtonShowTree" to="." method="_on_ButtonShowTree_pressed"]
